--- a/twilight-hammer/src/i18n/en/translation.json
+++ b/twilight-hammer/src/i18n/en/translation.json
@@ -1,5 +1,10 @@
 {
   "send to host": "Send the input message to host",
   "learn more": "Click on the above logos to learn more",
-  "received": "Received: "
+  "received": "Received: ",
+  "nav": {
+    "home": "Home",
+    "example": "Example",
+    "about": "About"
+  }
 }
