--- a/twilight-hammer/src/i18n/zh/translation.json
+++ b/twilight-hammer/src/i18n/zh/translation.json
@@ -1,5 +1,10 @@
 {
   "send to host": "将所输入消息发送到主机端",
   "learn more": "可以通过点击上面的标志进一步了解",
-  "received": "收到了："
+  "received": "收到了：",
+  "nav": {
+    "home": "主页",
+    "example": "示例",
+    "about": "关于"
+  }
 }
