Fix bugs in client and host

--- a/twilight-hammer/src/i18n/en/translation.json
+++ b/twilight-hammer/src/i18n/en/translation.json
@@ -12,6 +12,7 @@
     "open file": "Open a file",
     "open": "Open",
     "selected file": "Selected File",
+    "file content": "File Content",
     "file preview": "File Preview"
   }
 }
