--- a/twilight-hammer/src/i18n/zh/translation.json
+++ b/twilight-hammer/src/i18n/zh/translation.json
@@ -12,6 +12,7 @@
     "open file": "打开文件",
     "open": "打开",
     "selected file": "已选择文件",
+    "file content": "文件内容",
     "file preview": "文件预览"
   }
 }
